--- a/views/public-buildings.ejs
+++ b/views/public-buildings.ejs
@@ -72,10 +72,14 @@
             <h2>Inner Norwich Public Buildings Tour</h2>
         </div>
         <div class="row subtitle-text">
-            <h5>Click on a point to learn more about each public building. For the best experience, we recommend visiting each site in the order specified (1-7). The green point marks your current location and will update as you move.</h3>
+            <h5>Click on a point to learn more about each public building. For the best experience, we recommend visiting each site in the order specified (1-7). The green point marks your current location and will update as you move.</h5>
+            <h5>When you have completed the tour, click the 'complete tour' button at the bottom of the page.</h5>
         </div>
         <div class="col-12 mt-5 map-container">
             <div id="map"></div>
+        </div>
+        <div class="col-12 mb-5 d-flex justify-content-center">
+          <a class="btn btn-primary rating-btn" href="/tours/public-buildings/rating" role="button">Complete Tour</a>
         </div>
       </div>
 </body>
