Added back button to rating screen

--- a/views/tour-rating.ejs
+++ b/views/tour-rating.ejs
@@ -28,6 +28,7 @@
 <body>
     <nav class="navbar navbar-expand-lg nav-background">
         <div class="container-fluid">
+          <span class="material-icons back-arrow"> arrow_back_ios </span>
           <a class="navbar-brand" href="/">
             <img src="/images/logo.png" alt="Logo" width="25" height="30" class="d-inline-block align-text-top">
             Norwich Heritage Tours
