--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -55,9 +55,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="/tours">Tours</a>
-            <a class="nav-link" href="/gallery">Gallery</a>
+            <a class="nav-link active" href="/gallery">Gallery</a>
             <a class="nav-link" href="/map">Map</a>
             <a class="nav-link" href="/more">More</a>
           </div>
