Updated site screen images

--- a/views/site-screen.ejs
+++ b/views/site-screen.ejs
@@ -68,7 +68,7 @@
     <div class="container">
       <div class="image-container">
         <img
-        src="../images/all-saints.jpg"
+        src=<%= site.image_link %>
         class="img-fluid gallery-image site-image"
         alt="Responsive image"
       />
