Updated application name

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,14 +23,14 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <title>Norwich Heritage Tours - Home</title>
+    <title>Norwich Digital Heritage Tours - Home</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg nav-background">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
           <img src="/images/logo.png" alt="Logo" width="25" height="30" class="d-inline-block align-text-top">
-          Norwich Heritage Tours
+          Norwich Digital Heritage Tours
         </a>
         <button
           class="navbar-toggler"
@@ -56,7 +56,7 @@
     </nav>
     <div class="container">
       <div class="row title-text">
-        <h2>Welcome to Norwich Heritage Tours</h2>
+        <h2>Welcome to Norwich Digital Heritage Tours</h2>
         <h3 class="home-subtitle">Select an option</h3>
       </div>
       <div class="row home-main-content">
@@ -72,23 +72,23 @@
           </a>
         </div>
         <div class=".col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 home-columns">
-          <a href="/gallery">
-            <div class="card h-100">
-              <img class="card-img-top" src="../images/norwich-castle.jpg" alt="Norwich castle">
-              <div class="card-body">
-                <h5 class="card-title">Gallery</h5>
-                <p class="card-text">View photos of each heritage site featured across all tours.</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class=".col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 home-columns">
           <a href="/map">
             <div class="card h-100">
               <img class="card-img-top" src="../images/norwich-map.png" alt="Map of Norwich">
               <div class="card-body">
                 <h5 class="card-title">Map</h5>
                 <p class="card-text">Locate heritage sites on our interactive map and learn more about them.</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class=".col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 home-columns">
+          <a href="/gallery">
+            <div class="card h-100">
+              <img class="card-img-top" src="../images/norwich-castle.jpg" alt="Norwich castle">
+              <div class="card-body">
+                <h5 class="card-title">Gallery</h5>
+                <p class="card-text">View photos of each heritage site featured across all tours.</p>
               </div>
             </div>
           </a>
