--- a/views/public-buildings.ejs
+++ b/views/public-buildings.ejs
@@ -27,7 +27,7 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANPJXyZnJG659k1QzEUfK3quG8aKjKrH8&callback=initMap">
     </script>
     <script src="../public/public-buildings-map-frontend.js"></script>
-    <title>Norwich Heritage Tours - Site Map</title>
+    <title>Norwich Digital Heritage Tours - Site Map</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg nav-background">
@@ -43,7 +43,7 @@
               height="30"
               class="d-inline-block align-text-top"
             />
-            Norwich Heritage Tours
+            Norwich Digital Heritage Tours
           </a>
           <button
             class="navbar-toggler"
