--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -24,7 +24,7 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <title>Norwich Heritage Tours - Site Gallery</title>
+    <title>Norwich Digital Heritage Tours - Site Gallery</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg nav-background">
@@ -40,7 +40,7 @@
             height="30"
             class="d-inline-block align-text-top"
           />
-          Norwich Heritage Tours
+          Norwich Digital Heritage Tours
         </a>
         <button
           class="navbar-toggler"
