--- a/views/site-screen.ejs
+++ b/views/site-screen.ejs
@@ -25,7 +25,7 @@
       crossorigin="anonymous"
     ></script>
     <% sites.forEach(site => { %>
-    <title>Norwich Heritage Tours - <%= site.siteName %> </title>
+    <title>Norwich Digital Heritage Tours - <%= site.siteName %> </title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg nav-background">
@@ -41,7 +41,7 @@
             height="30"
             class="d-inline-block align-text-top"
           />
-          Norwich Heritage Tours
+          Norwich Digital Heritage Tours
         </a>
         <button
           class="navbar-toggler"
