--- a/views/tour-rating.ejs
+++ b/views/tour-rating.ejs
@@ -23,7 +23,7 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <title>Norwich Heritage Tours - Rate the Tour</title>
+    <title>Norwich Digital Heritage Tours - Rate the Tour</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg nav-background">
@@ -31,7 +31,7 @@
           <span class="material-icons back-arrow"> arrow_back_ios </span>
           <a class="navbar-brand" href="/">
             <img src="/images/logo.png" alt="Logo" width="25" height="30" class="d-inline-block align-text-top">
-            Norwich Heritage Tours
+            Norwich Digital Heritage Tours
           </a>
           <button
             class="navbar-toggler"
