Removed opacity change on modal image

--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -85,7 +85,7 @@
               <img
               id="modal-image"
               src="../images/norwich-castle.jpg"
-              class="img-fluid gallery-image site-image"
+              class="img-fluid site-image"
               alt="Responsive image"
             />
               <p id="modal-info-text">Modal body text goes here.</p>
