--- a/public/site-gallery-styles.css
+++ b/public/site-gallery-styles.css
@@ -8,6 +8,9 @@
     margin-bottom: 20px;
     transition: 0.5s;
 }
+.site-image {
+    margin-bottom: 20px;
+}
 .gallery-image:hover {
     opacity: 0.7;
 }
