New modal image links

--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -130,25 +130,25 @@
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <button id="12" onclick="showPreview(this.id)" data-bs-toggle="modal" data-bs-target="#site-modal">
           <img
-            src="https://storage.googleapis.com/heritage-tourism-store/norwich-city-hall.jpg"
+            src="https://storage.googleapis.com/heritage-tourism-store/city%20hall.jpg"
             class="img-fluid gallery-image"
-            alt="An image of the exterior of City Hall at night."
+            alt="An image of the exterior of City Hall."
           />
         </button>
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <button id="13" onclick="showPreview(this.id)" data-bs-toggle="modal" data-bs-target="#site-modal">
           <img
-            src="https://storage.googleapis.com/heritage-tourism-store/norwich-the-forum.jpg"
+            src="https://storage.googleapis.com/heritage-tourism-store/the-forum-atrium.jpg"
             class="img-fluid gallery-image"
-            alt="An image of the exterior of The Forum."
+            alt="An image of the interior of The Forum."
           />
           </button>
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <button id="14" onclick="showPreview(this.id)" data-bs-toggle="modal" data-bs-target="#site-modal">
           <img
-            src="https://storage.googleapis.com/heritage-tourism-store/norwich-strangers-hall.jpg"
+            src="https://storage.googleapis.com/heritage-tourism-store/strangers-hall-inside.jpg"
             class="img-fluid gallery-image"
             alt="An image of the exterior of Strangers' Hall."
           />
@@ -157,7 +157,7 @@
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <button id="15" onclick="showPreview(this.id)" data-bs-toggle="modal" data-bs-target="#site-modal">
           <img
-            src="https://storage.googleapis.com/heritage-tourism-store/norwich-great-hospital.jpg"
+            src="https://storage.googleapis.com/heritage-tourism-store/the-great-hospital-tree.jpg"
             class="img-fluid gallery-image"
             alt="An image of the exterior of the buildings at The Great Hospital."
           />
