Updated home subtitle

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="row title-text">
         <h2>Welcome to Norwich Digital Heritage Tours</h2>
-        <h3 class="home-subtitle">Select an option</h3>
+        <h3 class="home-subtitle">Select an option by clicking on 'tours', 'map' or 'gallery'.</h3>
       </div>
       <div class="row home-main-content">
         <div class=".col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 home-columns">
