--- a/views/churches.ejs
+++ b/views/churches.ejs
@@ -32,7 +32,7 @@
 <body>
     <nav class="navbar navbar-expand-lg nav-background">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand norwich-dht" href="/">
             <span class="material-icons back-arrow"> arrow_back_ios </span>
           </a>
           <a class="navbar-brand" href="/">
