--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
   <body>
     <nav class="navbar navbar-expand-lg nav-background">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand norwich-dht" href="/">
           <img src="/images/logo.png" alt="Logo" width="25" height="30" class="d-inline-block align-text-top">
           Norwich Digital Heritage Tours
         </a>
