--- a/views/public-buildings.ejs
+++ b/views/public-buildings.ejs
@@ -35,7 +35,7 @@
           <a class="navbar-brand" href="/">
             <span class="material-icons back-arrow"> arrow_back_ios </span>
           </a>
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand norwich-dht" href="/">
             <img
               src="/images/logo.png"
               alt="Logo"
