--- a/views/site-screen.ejs
+++ b/views/site-screen.ejs
@@ -33,7 +33,7 @@
         <a class="navbar-brand" href="/gallery">
           <span class="material-icons"> arrow_back_ios </span>
         </a>
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand norwich-dht" href="/">
           <img
             src="/images/logo.png"
             alt="Logo"
