--- a/views/tours-home.ejs
+++ b/views/tours-home.ejs
@@ -32,7 +32,7 @@
           <a class="navbar-brand" href="/">
             <span class="material-icons"> arrow_back_ios </span>
           </a>
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand norwich-dht" href="/">
             <img
               src="/images/logo.png"
               alt="Logo"
